--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
-    "axios": "^1.7.2"
+    "axios": "^1.7.2",
+    "dotenv": "^16.4.5"
   }
 }
